# slam-localizacao-amcl-ros-gazebo

./: .gitignore  README.md  docker-compose.yml  husky_accessories.sh
config/: hector_slam.rviz
docker/: Dockerfile.noetic
lar_gazebo/: CMakeLists.txt  package.xml
lar_gazebo/docker/: entrypoint.sh
lar_gazebo/husky_urdf_extras/: gazebo_ground_truth.urdf
lar_gazebo/launch/: amcl.launch  lar_world.launch
lar_gazebo/maps/: mapa_gmapping.pgm  mapa_gmapping.yaml
lar_gazebo/models/lar_shelf/: model.sdf
lar_gazebo/models/lar_walls/: model.config
lar_gazebo/models/lar_walls/meshes/: lar_walls_2.dae
lar_gazebo/models/pc_station/: model.sdf
lar_gazebo/models/rj45_plug/: model.sdf
lar_gazebo/models/rj45_plug/meshes/: rj45_plug.dae
lar_gazebo/models/tag36_11_00000/: model-1_4.sdf  model-1_5.sdf  model.sdf
lar_gazebo/models/tag36_11_00001/: model-1_5.sdf
lar_gazebo/models/tag36_11_00002/: model-1_4.sdf  model-1_5.sdf
lar_gazebo/models/tag36_11_00003/: model-1_4.sdf  model-1_5.sdf
lar_gazebo/models/tag36_11_00006/: model-1_4.sdf
lar_gazebo/models/tag36_11_00007/: model-1_4.sdf  model-1_5.sdf  model.sdf
lar_gazebo/models/tag36_11_00008/: model-1_5.sdf
lar_gazebo/models/tag36_11_00009/: model-1_4.sdf
lar_gazebo/resultados/: erro_posicao_mapa_gmapping.csv  erro_posicao_mapa_hector.csv  poses_mapa_hector_original.csv
lar_gazebo/scripts/: captura_poses.py  entrar.sh  run_husky.sh
launch/: gmapping.launch  hector_slam.launch  lar_husky.launch
maps/: mapa_hector.pgm  mapa_hector.yaml
models/lar_walls/: model-1_7.sdf
models/pc_station/: model.config
models/rj45_plug/: model.config
models/tag36_11_00001/: model-1_4.sdf  model.sdf
models/tag36_11_00002/: model.sdf
models/tag36_11_00003/: model.sdf
models/tag36_11_00004/: model-1_4.sdf  model-1_5.sdf  model.sdf
resultados/: poses_mapa_gmapping.csv  poses_mapa_hector.csv
scripts/: calcular_metricas.py
worlds/: lar.world
(+10 files in other folders)
