<?xml version="1.0"?>
<package format="2">
  <name>lar_gazebo</name>
  <version>1.1.0</version>
  <description>The lar_gazebo package</description>

  <maintainer email="ericksuzart@gmail.com">Erick Suzart Souza</maintainer>
  <maintainer email="mateusmenezes95@gmail.com">Mateus Menezes</maintainer>

  <license>BSD</license>
  <url type="website">https://github.com/ericksuzart/lar_gazebo</url>
  <author email="ericksuzart@gmail.com">Erick Suzart Souza</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>hector_gazebo_plugins</exec_depend>
  <exec_depend>hector_geotiff_launch</exec_depend>
  <exec_depend>hector_mapping</exec_depend>
  <exec_depend>hector_slam</exec_depend>
  <exec_depend>husky_gazebo</exec_depend>
  <exec_depend>rviz</exec_depend>

  <test_depend>roslaunch</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <!--export path of models to gazebo enviroment-->
    <gazebo_ros
        gazebo_plugin_path="${prefix}/lib"
        gazebo_model_path="${prefix}/models" />
  </export>
</package>
